--- a/package.json
+++ b/package.json
@@ -9,15 +9,34 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.3.4",
+    "@tailwindcss/line-clamp": "^0.4.2",
+    "@vitejs/plugin-vue": "^3.2.0",
+    "@vue-leaflet/vue-leaflet": "^0.6.1",
+    "chart.js": "^4.4.0",
+    "highcharts": "^11.1.0",
+    "highcharts-vue": "^1.4.3",
     "leaflet": "^1.9.3",
+    "leaflet.marker.slideto": "^0.3.0",
+    "leaflet.markercluster": "^1.5.3",
+    "moment": "^2.29.4",
+    "papaparse": "^5.4.1",
+    "patch-package": "6.4.7",
+    "pinia": "^2.0.33",
     "postcss": "^8.4.19",
-    "tailwindcss": "^3.2.4",
-     "@vitejs/plugin-vue": "^3.2.0",
-    "@vue-leaflet/vue-leaflet": "^0.7.0"
+    "vue": "^3.3.4"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.3",
     "@vitejs/plugin-vue": "^4.2.3",
+    "@vue-leaflet/vue-leaflet": "^0.6.1",
+    "autoprefixer": "^10.4.13",
+    "eslint": "^8.11.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-vue": "^8.5.0",
+    "firebase-tools": "^11.24.0",
+    "leaflet": "^1.9.3",
+    "postcss": "^8.4.19",
+    "tailwindcss": "^3.3.3",
     "vite": "^4.4.5"
   }
 }
