--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vitejs/plugin-vue": "^3.2.0",
     "@vue-leaflet/vue-leaflet": "^0.6.1",
     "chart.js": "^4.4.0",
+    "firebase": "^10.3.0",
     "highcharts": "^11.1.0",
     "highcharts-vue": "^1.4.3",
     "leaflet": "^1.9.3",
